fix word wrap css

--- a/app/styles/shoelace-customizations.css
+++ b/app/styles/shoelace-customizations.css
@@ -33,7 +33,7 @@ sl-card {
   width: 100%;
   min-height: 200px;
   display: block;
-  overflow-wrap: break-word;
+  word-wrap: break-word;
 
   &::part(base) {
     box-shadow: 0 2px 2px var(--color-shadow);
